--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "clean": "pnpm store prune && pnpm install --force && rm -rf .next node_modules/.cache"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
