--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "clean": "pnpm store prune && pnpm install --force && rm -rf .next node_modules/.cache"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.23.2",
+    "@clerk/themes": "^2.2.53",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.4",
