--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "fix": "prettier --write . && next lint --fix",
-    "clean": "pnpm store prune && pnpm install --force && rm -rf .next node_modules/.cache"
+    "clean": "pnpm store prune && pnpm install --force && rm -rf .next node_modules/.cache",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
+    "db:push": "drizzle-kit push --config=drizzle.config.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.2",
     "@clerk/themes": "^2.2.53",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@next/mdx": "^15.3.4",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -24,6 +28,9 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.0",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
