--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:push": "drizzle-kit push --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.0-beta.3",
+    "@ai-sdk/react": "2.0.0-beta.4",
     "@clerk/nextjs": "^6.23.2",
     "@clerk/themes": "^2.2.53",
     "@mdx-js/loader": "^3.1.0",
@@ -31,11 +33,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.21.3",
+    "ai": "5.0.0-beta.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.0.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
+    "exa-js": "^1.8.17",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
@@ -45,7 +49,8 @@
     "react-dom": "^19.1.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
