--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ai": "5.0.0-beta.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.0.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
@@ -49,6 +50,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
     "react-markdown": "^10.1.0",
