--- a/package.json
+++ b/package.json
@@ -11,25 +11,21 @@
     "clean": "pnpm store prune && pnpm install --force && rm -rf .next node_modules/.cache",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
-    "db:push": "drizzle-kit push --config=drizzle.config.ts"
+    "db:push": "drizzle-kit push --config=drizzle.config.ts",
+    "knip": "knip"
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.0-beta.3",
-    "@ai-sdk/react": "2.0.0-beta.4",
     "@clerk/nextjs": "^6.23.2",
     "@clerk/themes": "^2.2.53",
     "@mdx-js/react": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
     "@next/mdx": "^15.3.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
@@ -46,7 +42,6 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
@@ -63,6 +58,7 @@
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.4",
+    "knip": "^5.61.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.1.11",
