--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "@ai-sdk/openai": "2.0.0-beta.3",
     "@clerk/nextjs": "^6.23.2",
     "@clerk/themes": "^2.2.53",
-    "@mdx-js/react": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@next/mdx": "^15.3.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -35,19 +33,18 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.2",
     "exa-js": "^1.8.19",
-    "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.71"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@content-collections/core": "^0.9.1",
+    "@content-collections/markdown": "^0.1.4",
+    "@content-collections/next": "^0.2.6",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -63,6 +60,7 @@
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.25.71"
   }
 }
